# network-tools

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
config-generator/: README.md  generator.py  inventory.yaml  requirements.txt
config-generator/templates/: arista_eos.j2  cisco_ios.j2  cisco_iosxr.j2  juniper_junos.j2
console-connector/: README.md  config.yaml.example  console.py  requirements.txt
device-inventory/: README.md  devices.yaml.example  inventory_collector.py  requirements.txt
netcli/: __init__.py  cli.py
netcli/config/: generator.py
netcli/console/: connector.py
netcli/inventory/: collector.py
netcli/peering/: peeringdb.py
netcli/rpki/: validator.py
peeringdb-lookup/: README.md  peeringdb_tool.py
rpki-validator/: README.md  prefixes.yaml.example  requirements.txt  rpki_validator.py
tests/: test_rpki.py
