[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netcli"
version = "0.1.0"
description = "CLI toolkit for network reliability engineers"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "requests>=2.31.0",
    "netmiko>=4.3.0",
    "tabulate>=0.9.0",
    "paramiko>=3.4.0",
]

[project.scripts]
netcli = "netcli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["netcli*"]
